# simple-cmd

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
src/: debug.rs  errors.rs  impls.rs  lib.rs  output_ext.rs  test.rs
