[package]
name = "simple-cmd"
version = "0.0.5"
edition = "2021"
license = "MIT"
authors = ["Alessandro Crugnola <alessandro.crugnola@gmail.com>"]
description = "command line utility for spawning commands"
homepage = "https://github.com/sephiroth74/simple-cmd"
repository = "https://github.com/sephiroth74/simple-cmd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
crossbeam = "0.8.2"
signal-hook = "0.3.17"
crossbeam-channel = "0.5.9"
tracing = "0.1.40"

[dev-dependencies]
simple_logger = "4.3.0"
ctrlc = "3.4.1"
tracing-subscriber = "0.3.18"
